--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
 
 <h2>News</h2>
+<h3>NTIRE 2022 Stereo Image Super-Resolution Challenge--Started!</h3>
 
 <h3>2018-Now, 20 Papers</h3>
 <table style="border-spacing:2px">
@@ -164,7 +165,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 638] [Highest Citation: 351]</h2>
+<h2>Selected Publications [Total Citations: 639] [Highest Citation: 352]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -294,12 +295,29 @@
 
 	<tr>	
 		<td width="206">
+		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution 【New】</a><br>
+		Guangwei Gao, Wenjie Li, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
+		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
+		<font color="red">Top artificial intelligence conference. *Corresponding author.</font><br>
+		[Paper]
+		[Poster]
+        <a href="", target="_blank">[Code]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
 		<img src="./indexpics/MSRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
+		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution 【Hot】</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top computer vision conference. The most popular paper. 247 stars and 58 forks in Github.</font><br>
+		<font color="red">Top computer vision conference. 247 stars and 58 forks in Github.</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
@@ -374,7 +392,27 @@
 		<font color="red">Top multimedia conference.</font><br>
 		<a href="paper/ACMMM_2021.pdf", target="_blank">[Paper]</a>
 		<a href="poster/ACMMM_poster.pdf", target="_blank">[Poster]</a>
-        <a href="#", target="_blank">[Code]</a>
+        [Code]
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+</tbody></table>
+
+
+<h4>Competition Reports</h4>
+<table id="tbPublications" width="100%">
+	<tbody>
+    <tr>	
+		<td width="206">
+		<img src="./indexpics/NTIRE2018.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ancuti_NTIRE_2018_Challenge_CVPR_2018_paper.pdf" target="_blank">ENTIRE 2018 Challenge on Image Dehazing: Methods and Results</a><br>
+		<p><em>CVPR NTIRE</em>, 2018. <br>
+		<font color="red">The 6th place and Honorable Mention Award.</font><br>
+        <a href="paper/NTIRE2018.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -383,22 +421,18 @@
 
 	<tr>	
 		<td width="206">
-		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		<img src="./indexpics/AIM2019.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution</a><br>
-		Guangwei Gao, Wenjie Li, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
-		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
-		<font color="red">Top artificial intelligence conference. *Corresponding author.</font><br>
-		[Paper]
-		[Poster]
-        <a href="The code is available at \url{https://github.com/IVIPLab/FDIWN", target="_blank">[Code]</a>
+		<td> <a href="http://people.ee.ethz.ch/~timofter/publications/Ignatov-ICCVW-2019c.pdf" target="_blank">AIM 2019 Challenge on RAW to RGB Mapping: Methods and Results</a><br>
+		<p><em>ICCV AIM</em>, 2019.<br>
+		<font color="red">The 1st place in track 2. The 2nd place in track 1.</font><br>
+		<a href="paper/AIM2019.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-
-</tbody></table>
+ </tbody></table>
 
 
 <h2>Academic Services</h2>
@@ -418,6 +452,9 @@
 <h3>Technical Program Committee (TPC)</h3>
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
+			<tr>
+				<td> <a href="https://www.ammcs.org/committee", target="_blank">The 2nd International Conference on Applied Mathematics, Modeling and Computer Simulation, 2022.</a></td>
+			</tr>
 			<tr>
 				<td> <a href="http://www.tdiconference.com/wabd2022.html", target="_blank">Transdisciplinary Information Sciences conferences - Workshop on Algorithm and Big Data, 2022.</a></td>
 			</tr>
