--- a/index_zw.html
+++ b/index_zw.html
@@ -69,6 +69,8 @@
 
 <h2>最新消息</h2>
 
+<h3>NTIRE 2022 双目图像超分辨率挑战赛--正式开赛!</h3>
+
 <h3>2018-现在，共20篇</h3>
 <table style="border-spacing:2px">
 	<tbody>
@@ -159,7 +161,7 @@
 
 
 
-<h2>精选出版物 [总引用: 638] [最高引用: 351] </h2>
+<h2>精选出版物 [总引用: 639] [最高引用: 352] </h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -291,12 +293,29 @@
 
 	<tr>	
 		<td width="206">
+		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution 【最新】</a><br>
+		Guangwei Gao, Wenjie Li, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
+		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
+		<font color="red">人工智能顶会. *通讯作者.</font><br>
+		[论文]
+		[海报]
+        <a href="The code is available at \url{https://github.com/IVIPLab/FDIWN", target="_blank">[代码]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+	<tr>	
+		<td width="206">
 		<img src="./indexpics/MSRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
+		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution 【热门】</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">计算机视觉顶级会议。最受欢迎论文，在GitHub上有247颗Star，58个Fork。</font><br>
+		<font color="red">计算机视觉顶级会议。在GitHub上有247颗Star，58个Fork。</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[代码]</a>
@@ -371,7 +390,27 @@
 		<font color="red">多媒体顶级会议。</font><br>
 		<a href="paper/ACMMM_2021.pdf", target="_blank">[论文]</a>
 		<a href="poster/ACMMM_poster.pdf", target="_blank">[海报]</a>
-        <a href="#", target="_blank">[代码]</a>
+        [代码]
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+	
+</tbody></table>
+
+
+<h4>比赛报告</h4>
+<table id="tbPublications" width="100%">
+	<tbody>
+    <tr>	
+		<td width="206">
+		<img src="./indexpics/NTIRE2018.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ancuti_NTIRE_2018_Challenge_CVPR_2018_paper.pdf" target="_blank">ENTIRE 2018 Challenge on Image Dehazing: Methods and Results</a><br>
+		<p><em>CVPR NTIRE</em>, 2018. <br>
+		<font color="red">第六名 及 荣誉提名奖。</font><br>
+        <a href="paper/NTIRE2018.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -380,22 +419,18 @@
 
 	<tr>	
 		<td width="206">
-		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		<img src="./indexpics/AIM2019.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution</a><br>
-		Guangwei Gao, Wenjie Li, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
-		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
-		<font color="red">人工智能顶会. *通讯作者.</font><br>
-		[论文]
-		[海报]
-        <a href="The code is available at \url{https://github.com/IVIPLab/FDIWN", target="_blank">[代码]</a>
+		<td> <a href="http://people.ee.ethz.ch/~timofter/publications/Ignatov-ICCVW-2019c.pdf" target="_blank">AIM 2019 Challenge on RAW to RGB Mapping: Methods and Results</a><br>
+		<p><em>ICCV AIM</em>, 2019.<br>
+		<font color="red">第2赛道第1名。第1赛道第2名。</font><br>
+		<a href="paper/AIM2019.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
-	
-</tbody></table>
+ </tbody></table>
 
 
 <h2>学术服务</h2>
@@ -415,6 +450,9 @@
 <h3>技术委员会委员</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
+		<tr>
+			<td> <a href="https://www.ammcs.org/committee", target="_blank">The 2nd International Conference on Applied Mathematics, Modeling and Computer Simulation, 2022.</a></td>
+			</tr>
 		<tr>
 			<td> <a href="http://www.tdiconference.com/wabd2022.html", target="_blank">Transdisciplinary Information Sciences conferences - Workshop on Algorithm and Big Data, 2022.</a></td>
 		</tr>
