--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
 <h2>News</h2>
-<h3>NTIRE 2022 Stereo Image Super-Resolution Challenge--Started!</h3>
+<h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598"></a>NTIRE 2022 Stereo Image Super-Resolution Challenge--Started!</a></h3>
 
 <h3>2018-Now, 20 Papers</h3>
 <table style="border-spacing:2px">
@@ -119,18 +119,6 @@
 		<tr><td> The 3rd place in China Multimedia - <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"Image Dehazing Challenge"</a>, <b>(ChinaMM)</b>, 2018.</td></tr>
 		<tr><td> The 6th place and "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"Image Dehazing Challenge".</a> <b>(CVPR-NTIRE)</b>, 2018.</td></tr>
 		<tr><td>Ranked 24th in Jingdong Algorithm Challenge - "Potential User Prediction" <b>(24/4240)</b>, 2017.</td></tr>
-	</tbody>
-</table>
-
-<h3>2012-2016 (Undergraduate Period)</h3></tbody>
-<table style="border-spacing:2px">
-	<tbody>
-		<tr><td>Mingde Scholarship, China, 2015. (3.0%)</td></tr> 
-		<tr><td>Second Award in National Computer Design Contest, China, 2014, 2015.</td></tr> 
-		<tr><td>Outstanding Graduates, Jiangxi Normal University, 2016.</td></tr> 
-		<tr><td>Merit Student, Jiangxi Normal University, 2013-2016.</td></tr>
-		<tr><td>Outstanding Student, Jiangxi Normal University, 2013-2016.</td></tr> 
-		<tr><td>First-class Student Scholarship, Jiangxi Normal University, 2013-2016</td></tr> 
 	</tbody>
 </table>
 
@@ -409,7 +397,7 @@
 		<td width="206">
 		<img src="./indexpics/NTIRE2018.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ancuti_NTIRE_2018_Challenge_CVPR_2018_paper.pdf" target="_blank">ENTIRE 2018 Challenge on Image Dehazing: Methods and Results</a><br>
+		<td> <a href="https://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ancuti_NTIRE_2018_Challenge_CVPR_2018_paper.pdf" target="_blank">NTIRE 2018 Challenge on Image Dehazing: Methods and Results</a><br>
 		<p><em>CVPR NTIRE</em>, 2018. <br>
 		<font color="red">The 6th place and Honorable Mention Award.</font><br>
         <a href="paper/NTIRE2018.pdf", target="_blank">[Paper]</a>
@@ -471,16 +459,10 @@
 			<td> IEEE TIP/ TMM/ TCSVT/ SPL</td>
 		</tr>
         <tr>
-			<td> Information Science</td>
+			<td> Information Science/ Pattern Recognition/ Knowledge-Based Systems</td>
 		</tr>
 		<tr>
-			<td> Pattern Recognition</td>
-		</tr>
-		<tr>
-			<td> Knowledge-Based Systems</td>
-		</tr>
-		<tr>
-			<td> ICME/ BMVC/ ICPR</td>
+			<td> ICME/ BMVC/ ICPR...</td>
 		</tr>
 	</tbody>
 </table>
@@ -489,22 +471,13 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> Member of the Computer Vision Foundation (CVF)</td>
-		</tr>
-		<tr>
-			<td> Member of China Computer Federation (CCF)</td>
-		</tr>
-		<tr>
-			<td> Member of the China Society of Image Graphics (CSIG)</td>
-		</tr>
-		<tr>
-			<td> Member of the Chinese Association for Artificial Intelligence (CAAI)</td>
+			<td> Member of CVF/CCF/CSIG/CAAI</td>
 		</tr>
 		<tr>
 			<td> Founder of CLF Studio 【A non-profit student innovation studio】</td>
 		</tr>
 		<tr>
-			<td> Founder of <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> 【A non-profit image processing laboratory affiliated with CLF-AI】</td>
+			<td> Founder of <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> </td>
 		</tr>
 	</tbody>
 </table>
