--- a/index_zw.html
+++ b/index_zw.html
@@ -69,7 +69,7 @@
 
 <h2>最新消息</h2>
 
-<h3>NTIRE 2022 双目图像超分辨率挑战赛--正式开赛!</h3>
+<h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598">NTIRE 2022 双目图像超分辨率挑战赛--正式开赛!</a></h3>
 
 <h3>2018-现在，共20篇</h3>
 <table style="border-spacing:2px">
@@ -115,18 +115,6 @@
 		<tr><td> 获得<a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"中国多媒体大会 - 去雾挑战赛"</a>全国第三名, 二等奖, <b>(ChinaMM)</b>, 2018.</td></tr>
 		<tr><td> 获得<a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"图像去雾挑战赛"</a>全球第六名 和 “荣誉提名奖”, <b>(CVPR-NTIRE)</b>, 2018.</td></tr>
 		<tr><td> 获得 "京东算法挑战赛 - 潜在购买用户预测" 全国第24名, <b>(24/4240)</b>, 2017.</td></tr>
-	</tbody>
-</table>
-
-<h3>2012-2016 (本科期间)</h3></tbody>
-<table style="border-spacing:2px">
-	<tbody>
-		<tr><td>明德奖学金, 中国, 2015. (3.0%)</td></tr> 
-		<tr><td>中国大学生计算机设计大赛全国二等奖, 中国, 2014, 2015.</td></tr> 
-		<tr><td>优秀毕业生, 江西师范大学, 2016.</td></tr> 
-		<tr><td>三好学生, 江西师范大学, 2013-2016. (连续4年)</td></tr>
-		<tr><td>优秀学生, 江西师范大学, 2013-2016. (连续4年)</td></tr> 
-		<tr><td>一等学业奖学金, 江西师范大学, 2013-2016. (连续4年)</td></tr> 
 	</tbody>
 </table>
 
@@ -407,7 +395,7 @@
 		<td width="206">
 		<img src="./indexpics/NTIRE2018.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ancuti_NTIRE_2018_Challenge_CVPR_2018_paper.pdf" target="_blank">ENTIRE 2018 Challenge on Image Dehazing: Methods and Results</a><br>
+		<td> <a href="https://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Ancuti_NTIRE_2018_Challenge_CVPR_2018_paper.pdf" target="_blank">NTIRE 2018 Challenge on Image Dehazing: Methods and Results</a><br>
 		<p><em>CVPR NTIRE</em>, 2018. <br>
 		<font color="red">第六名 及 荣誉提名奖。</font><br>
         <a href="paper/NTIRE2018.pdf", target="_blank">[论文]</a>
@@ -469,16 +457,10 @@
 			<td> IEEE TIP/ TMM/ TCSVT/ SPL</td>
 		</tr>
         <tr>
-			<td> Information Science</td>
+			<td> Information Science/ Pattern Recognition/ Knowledge-Based Systems</td>
 		</tr>
 		<tr>
-			<td> Pattern Recognition</td>
-		</tr>
-		<tr>
-			<td> Knowledge-Based Systems</td>
-		</tr>
-		<tr>
-			<td> ICME/ BMVC/ ICPR</td>
+			<td> ICME/ BMVC/ ICPR ...</td>
 		</tr>
 	</tbody>
 </table>
@@ -487,22 +469,13 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> 计算机视觉基金会（CVF）会员</td>
-		</tr>
-		<tr>
-			<td> 中国计算机学会（CCF）会员</td>
-		</tr>
-		<tr>
-			<td> 中国图象图形学学会（CSIG）会员</td>
-		</tr>
-		<tr>
-			<td> 中国人工智能学会（CAAI）会员</td>
+			<td> CVF/CCF/CSIG/CAAI会员</td>
 		</tr>
 		<tr>
 			<td> 丛林蜂工作室（CLF Studio）创始人【非营利学生创新工作室】</td>
 		</tr>
 		<tr>
-			<td> <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> 发起人【隶属于CLF-AI的非营利性图像处理中心】</td>
+			<td> <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> 发起人</td>
 		</tr>
 	</tbody>
 </table>
