--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
 <h2>News</h2>
-<h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598"></a>NTIRE 2022 Stereo Image Super-Resolution Challenge--Started!</a></h3>
+<h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 Stereo Image Super-Resolution Challenge--Started!</a></h3>
 
 <h3>2018-Now, 20 Papers</h3>
 <table style="border-spacing:2px">
