--- a/index_zw.html
+++ b/index_zw.html
@@ -69,7 +69,7 @@
 
 <h2>最新消息</h2>
 
-<h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598">NTIRE 2022 双目图像超分辨率挑战赛--正式开赛!</a></h3>
+<h3><a href="https://codalab.lisn.upsaclay.fr/competitions/1598", target="_blank">NTIRE 2022 双目图像超分辨率挑战赛--正式开赛!</a></h3>
 
 <h3>2018-现在，共20篇</h3>
 <table style="border-spacing:2px">
