--- a/index.html
+++ b/index.html
@@ -287,9 +287,10 @@
 		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution 【New】</a><br>
 		Guangwei Gao, Wenjie Li, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
 		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
-		<font color="red">Top artificial intelligence conference. *Corresponding author.</font><br>
-		[Paper]
-		[Poster]
+		<font color="red">*Corresponding author.</font><br>
+		<font color="red">Top artificial intelligence conference.</font><br>
+		<a href="paper/AAAI.pdf", target="_blank">[Paper]</a>
+		<a href="poster/AAAI-poster.pdf", target="_blank">[Poster]</a>
         <a href="", target="_blank">[Code]</a>
 		</td>
 	</tr>
@@ -304,7 +305,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution 【Hot】</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top computer vision conference. 247 stars and 58 forks in Github.</font><br>
+		<font color="red">Top computer vision conference. 248 stars and 58 forks in Github.</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
