--- a/index_zw.html
+++ b/index_zw.html
@@ -285,9 +285,10 @@
 		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution 【最新】</a><br>
 		Guangwei Gao, Wenjie Li, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
 		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
-		<font color="red">人工智能顶会. *通讯作者.</font><br>
-		[论文]
-		[海报]
+		<font color="red">*通讯作者.</font><br>
+		<font color="red">人工智能顶会.</font><br>
+		<a href="paper/AAAI.pdf", target="_blank">[论文]</a>
+		<a href="poster/AAAI-poster.pdf", target="_blank">[海报]</a>
         <a href="The code is available at \url{https://github.com/IVIPLab/FDIWN", target="_blank">[代码]</a>
 		</td>
 	</tr>
@@ -302,7 +303,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution 【热门】</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">计算机视觉顶级会议。在GitHub上有247颗Star，58个Fork。</font><br>
+		<font color="red">计算机视觉顶级会议。在GitHub上有248颗Star，58个Fork。</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[代码]</a>
