--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
 		<img src="./indexpics/SeaNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="paper/TIP_2020.pdf" target="_blank">Soft-edge Assisted Network for Single Image Super-Resolution</a><br>
-		Faming Fang, <b>Juncheng Li*</b>, and Tieyong Zeng.
+		Faming Fang, <b>Juncheng Li</b>, and Tieyong Zeng.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
-		<font color="red">*First contributor, Author names alphabetically.</font><br> 
+		<font color="red">First contributor, Author names alphabetically.</font><br> 
 		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong (CUHK). SCI-1, Top journal.</font><br> 
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[Code]</a>
@@ -233,9 +233,9 @@
 		<img src="./indexpics/MLEFGN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="paper/TNNLS_2020.pdf" target="_blank">Multi-level Edge Features Guided Network for Image Denoising</a><br>
-		Faming Fang, <b>Juncheng Li*</b>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang.
+		Faming Fang, <b>Juncheng Li</b>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang.
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
-		<font color="red">*First contributor, Author names alphabetically.</font><br> 
+		<font color="red">First contributor, Author names alphabetically.</font><br> 
 		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong (CUHK). SCI-1, Top journal.</font><br> 
         <a href="paper/TNNLS_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[Code]</a>
