--- a/index_zw.html
+++ b/index_zw.html
@@ -209,9 +209,9 @@
 		<img src="./indexpics/SeaNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="paper/TIP_2020.pdf" target="_blank">Soft-edge Assisted Network for Single Image Super-Resolution</a><br>
-		Faming Fang, <b>Juncheng Li*</b>, and Tieyong Zeng.
+		Faming Fang, <b>Juncheng Li</b>, and Tieyong Zeng.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
-		<font color="red">*第一贡献人, 作者按字母序排列。</font><br> 
+		<font color="red">第一贡献人, 作者按字母序排列。</font><br> 
 		<font color="red">该工作在香港中文大学访问期间完成。SCI-1区，顶级期刊。</font><br> 
         <a href="paper/TIP_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[代码]</a>
@@ -228,9 +228,9 @@
 		<img src="./indexpics/MLEFGN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="paper/TNNLS_2020.pdf" target="_blank">Multi-level Edge Features Guided Network for Image Denoisingt</a><br>
-		Faming Fang, <b>Juncheng Li*</b>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang.
+		Faming Fang, <b>Juncheng Li</b>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang.
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
-		<font color="red">*第一贡献人, 作者按字母序排列。</font><br> 
+		<font color="red">第一贡献人, 作者按字母序排列。</font><br> 
 		<font color="red">该工作在香港中文大学访问期间完成。SCI-1区，顶级期刊。</font><br> 
         <a href="paper/TNNLS_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[代码]</a>
