--- a/index_zw.html
+++ b/index_zw.html
@@ -74,7 +74,8 @@
 <h3>2018-现在，共20篇</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>一篇论文已被 AAAI 2021 接收.</td></tr> 
+		<tr><td>一篇论文已被 TMM 2022 接收.</td></tr> 
+		<tr><td>一篇论文已被 AAAI 2022 接收.</td></tr> 
 		<tr><td>一篇论文已被 ICCV 2021 接收.</td></tr> 
 		<tr><td>一篇论文已被 ACM MM 2021 接收.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM 2021 接收.</td></tr> 
@@ -149,7 +150,7 @@
 
 
 
-<h2>精选出版物 [总引用: 685] [最高引用: 373] </h2>
+<h2>精选出版物 [总引用: 691] [最高引用: 378] </h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -273,6 +274,22 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://ieeexplore.ieee.org/document/9473023" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a><br>
+		Guangwei Gao, Guoan Xu, <b>Juncheng Li*</b>, Yi Yu, , Huimin Lu, and Jian Yang
+		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
+		<font color="red">*通讯作者.</font><br>
+		<a href="", target="_blank">[论文]</a>
+		<a href="", target="_blank">[代码]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
 </tbody></table>
 
 <h4>会议论文</h4></table>
@@ -289,7 +306,7 @@
 		<font color="red">人工智能顶会.</font><br>
 		<a href="paper/AAAI.pdf", target="_blank">[论文]</a>
 		<a href="poster/AAAI-poster.pdf", target="_blank">[海报]</a>
-        <a href="The code is available at \url{https://github.com/IVIPLab/FDIWN", target="_blank">[代码]</a>
+        <a href="https://github.com/IVIPLab/FDIWN", target="_blank">[代码]</a>
 		</td>
 	</tr>
 	<tr></tr>
