--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 <h3>2018-Now, 20 Papers</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>One paper is accepted by AAAI 2021.</td></tr> 
+		<tr><td>One paper is accepted by TMM 2022.</td></tr> 
+		<tr><td>One paper is accepted by AAAI 2022.</td></tr> 
 		<tr><td>One paper is accepted by ICCV 2021.</td></tr> 
 		<tr><td>One paper is accepted by ACM MM 2021.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM 2021.</td></tr> 
@@ -153,7 +154,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 685] [Highest Citation: 373]</h2>
+<h2>Selected Publications [Total Citations: 691] [Highest Citation: 378]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -275,6 +276,26 @@
 		<a href="https://ieeexplore.ieee.org/document/9473023", target="_blank">[Paper]</a>
 		</td>
 	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://ieeexplore.ieee.org/document/9473023" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a><br>
+		Guangwei Gao, Guoan Xu, <b>Juncheng Li*</b>, Yi Yu, , Huimin Lu, and Jian Yang
+		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
+		<font color="red">*Corresponding author.</font><br>
+		<a href="", target="_blank">[Paper]</a>
+		<a href="", target="_blank">[Code]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
 </tbody></table>
 
 <h4>Conference Papers</h4></table>
