--- a/index_zw.html
+++ b/index_zw.html
@@ -279,7 +279,7 @@
 		<td width="206">
 		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://ieeexplore.ieee.org/document/9473023" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a><br>
+		<td> <a href="" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a><br>
 		Guangwei Gao, Guoan Xu, <b>Juncheng Li*</b>, Yi Yu, , Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
 		<font color="red">*通讯作者.</font><br>
