--- a/index.html
+++ b/index.html
@@ -542,6 +542,7 @@
 	</tbody>
 </table>
 
+ <!--
 <h2>Meeting (2016.9-Now)</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
@@ -600,16 +601,19 @@
 			<td> <font color="red">Youth Vision Seminar</font>, ShanghaiTech University, Shanghai, China, 2016.</td>
 		</tr>
 	</tbody>
-</table>
+</table>-->
 
+<div id="footer">
+	<div id="footer-text"></div>
+</div>
 
 <p>
 <center>
 <div>
-<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
-</div>     
+ <!--<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
+</div>-->  
 <br>
-&copy; Juncheng Li | Last updated: 2022-2
+&copy; Juncheng Li | Last updated: 2022-3
 </center>
 </p>
 
