--- a/index_zw.html
+++ b/index_zw.html
@@ -538,7 +538,7 @@
 	</tbody>
 </table>
 
-
+ <!--
 <h2>参会 (2016.9-现在)</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
@@ -594,7 +594,7 @@
 			<td> <font color="red">青年视觉研讨会</font>, 上海科技大学, 上海, 中国, 2016.</td>
 		</tr>
 	</tbody>
-</table>
+</table> -->
 
 
 <div id="footer">
@@ -603,11 +603,11 @@
 
 <p>
 <center>
-<div>
+ <!--<div>
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
-</div>     
+</div> -->     
 <br>
-&copy; 李俊诚 | 最后更新: 2022-2
+&copy; 李俊诚 | 最后更新: 2022-3
 </center>
 </p>
 
