--- a/index_zw.html
+++ b/index_zw.html
@@ -282,7 +282,7 @@
 		<td> <a href="" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a><br>
 		Guangwei Gao, Guoan Xu, <b>Juncheng Li*</b>, Yi Yu, , Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
-		<font color="red">*通讯作者.</font><br>
+		<font color="red">*通讯作者。 SCI-1区。</font><br>
 		<a href="", target="_blank">[论文]</a>
 		<a href="", target="_blank">[代码]</a>
 		</td>
