--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 		<td> <a href="" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a><br>
 		Guangwei Gao, Guoan Xu, <b>Juncheng Li*</b>, Yi Yu, , Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
-		<font color="red">*Corresponding author.</font><br>
+		<font color="red">*Corresponding author. SCI-1.</font><br>
 		<a href="", target="_blank">[Paper]</a>
 		<a href="", target="_blank">[Code]</a>
 		</td>
