--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 698] [Highest Citation: 379]</h2>
+<h2>Selected Publications [Total Citations: 697] [Highest Citation: 379]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -326,7 +326,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution 【Hot】</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top computer vision conference. 249 stars and 58 forks in Github.</font><br>
+		<font color="red">Top computer vision conference. 248 stars and 58 forks in Github.</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
@@ -445,6 +445,15 @@
 
 
 <h2>Academic Services</h2>
+
+<h3>Program Committee (PC)</h3>
+<table id="tbTeaching" border="0" width="100%">
+		<tbody>
+			<tr>
+				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">NTIRE, 2022.</a></td>
+			</tr>
+		</tbody>
+</table>
 
 <h3>Co-Organizer</h3>
 <table id="tbTeaching" border="0" width="100%">
