--- a/index_zw.html
+++ b/index_zw.html
@@ -150,7 +150,7 @@
 
 
 
-<h2>精选出版物 [总引用: 698] [最高引用: 379] </h2>
+<h2>精选出版物 [总引用: 697] [最高引用: 379] </h2>
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -320,7 +320,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution 【热门】</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">计算机视觉顶级会议。在GitHub上有249颗Star，58个Fork。</font><br>
+		<font color="red">计算机视觉顶级会议。在GitHub上有248颗Star，58个Fork。</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[代码]</a>
@@ -440,6 +440,14 @@
 
 
 <h2>学术服务</h2>
+<h3>程序委员会成员 (PC)</h3>
+<table id="tbTeaching" border="0" width="100%">
+		<tbody>
+			<tr>
+				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">NTIRE, 2022.</a></td>
+			</tr>
+		</tbody>
+</table>
 
 <h3>组织者</h3>
 <table id="tbTeaching" border="0" width="100%">
@@ -453,7 +461,7 @@
 	</tbody>
 </table>
 
-<h3>技术委员会委员</h3>
+<h3>技术委员会成员 (TPC)</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
