--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
 <h2>Academic Services</h2>
 
-<h3>Program Committee (PC)</h3>
+<h3>Program Committee Member</h3>
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
 			<tr>
@@ -467,7 +467,7 @@
 	</tbody>
 </table>
 
-<h3>Technical Program Committee (TPC)</h3>
+<h3>Technical Program Committee Member</h3>
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
 			<tr>
