--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 697] [Highest Citation: 379]</h2>
+<h2>Selected Publications [Total Citations: 701] [Highest Citation: 380]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -164,7 +164,7 @@
 		<img src="./indexpics/SISR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://arxiv.org/pdf/2109.14335.pdf" target="_blank">From Beginner to Master: A Survey for Deep Learning-based Single-Image Super-Resolution</a><br>
-		<b>Juncheng Li</b>, Zehua Pei, and Tieyong Zeng.
+		<b>Juncheng Li</b>, Zehua Pei, and Tieyong Zeng*.
 		<p><em>arXiv 2109.14335</em>, 2021.<br>
 		<a href="paper/SISR_2021.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/CV-JunchengLi/SISR-Survey", target="_blank">[Homepage]</a>
@@ -183,7 +183,7 @@
 		<img src="./indexpics/MDCN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="paper/TCSVT_2020.pdf" target="_blank">MDCN: Multi-scale Dense Cross Network for Image Super-Resolution</a><br>
-		<b>Juncheng Li</b>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang.
+		<b>Juncheng Li</b>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang*.
 		<p><em>IEEE Transactions on Circuits and Systems for Video Technology</em> (<i><b>IEEE TCSVT</b></i>), 2020. <br>
 		<font color="red">Improved version of MSRN. SCI-2.</font><br>
         <a href="paper/TCSVT_2020.pdf", target="_blank">[Paper]</a>
@@ -201,7 +201,7 @@
 		<img src="./indexpics/SeaNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="paper/TIP_2020.pdf" target="_blank">Soft-edge Assisted Network for Single Image Super-Resolution</a><br>
-		Faming Fang, <b>Juncheng Li</b>, and Tieyong Zeng.
+		Faming Fang, <b>Juncheng Li</b>, and Tieyong Zeng*.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
 		<font color="red">First contributor, Author names alphabetically.</font><br> 
 		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong (CUHK). SCI-1, Top journal.</font><br> 
@@ -220,7 +220,7 @@
 		<img src="./indexpics/MLEFGN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="paper/TNNLS_2020.pdf" target="_blank">Multi-level Edge Features Guided Network for Image Denoising</a><br>
-		Faming Fang, <b>Juncheng Li</b>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang.
+		Faming Fang, <b>Juncheng Li</b>, Yiting Yuan, Tieyong Zeng*, and Guixu Zhang*.
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
 		<font color="red">First contributor, Author names alphabetically.</font><br> 
 		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong (CUHK). SCI-1, Top journal.</font><br> 
@@ -239,7 +239,7 @@
 		<img src="./indexpics/LPNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="paper/TMM_2020.pdf" target="_blank">Luminance-aware Pyramid Network for Low-light Image Enhancement</a><br>
-		Jiaqian Li#, <b>Juncheng Li#</b>, Faming Fang, Fang Li, and Guixu Zhang.
+		Jiaqian Li#, <b>Juncheng Li#</b>, Faming Fang*, Fang Li, and Guixu Zhang.
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
 		<font color="red">#Equal Contribution. SCI-1.</font><br> 
 		<a href="paper/TMM_2020.pdf", target="_blank">[Paper]</a>
@@ -256,7 +256,7 @@
 		<img src="./indexpics/MSTN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://ieeexplore.ieee.org/document/9473023" target="_blank">Efficient and Accurate Multi-scale Topological Network for Single Image Dehazing</a><br>
-		Qiaosi Yi#, <b>Juncheng Li#</b>, Faming Fang, Aiwen Jiang, Guixu Zhang
+		Qiaosi Yi#, <b>Juncheng Li#</b>, Faming Fang*, Aiwen Jiang, Guixu Zhang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
 		<font color="red">#Equal Contribution. SCI-1.</font><br> 
 		<a href="https://ieeexplore.ieee.org/document/9473023", target="_blank">[Paper]</a>
@@ -272,7 +272,7 @@
 		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a><br>
-		Guangwei Gao, Guoan Xu, <b>Juncheng Li*</b>, Yi Yu, , Huimin Lu, and Jian Yang
+		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
 		<font color="red">*Corresponding author. SCI-1.</font><br>
 		<a href="", target="_blank">[Paper]</a>
@@ -292,7 +292,7 @@
 		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution 【New】</a><br>
-		Guangwei Gao, Wenjie Li, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
+		Guangwei Gao#, Wenjie Li#, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
 		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
 		<font color="red">*Corresponding author.</font><br>
 		<font color="red">Top artificial intelligence conference.</font><br>
@@ -310,7 +310,7 @@
 		<img src="./indexpics/MSRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution 【Hot】</a><br>
-		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
+		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
 		<font color="red">Top computer vision conference. 248 stars and 58 forks in Github.</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
@@ -328,7 +328,7 @@
 		<img src="./indexpics/SRRFN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="paper/ICCVW_LCI_2019.pdf" target="_blank">Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution</a><br>
-		<b>Juncheng Li</b>, Yiting Yuan, Kangfu Mei, and Faming Fang.
+		<b>Juncheng Li</b>, Yiting Yuan, Kangfu Mei, and Faming Fang*.
 		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
 		<font color="red">Oral Presentation</font><br>
 		<a href="paper/ICCVW_LCI_2019.pdf", target="_blank">[Paper]</a>
@@ -347,7 +347,7 @@
 		<img src="./indexpics/HERN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="paper/ICCVW_AIM_2019.pdf" target="_blank">HighEr-Resolution Network for Image Demosaicing and Enhancing</a><br>
-		Kangfu Mei, <b>Juncheng Li</b>, Jiajie Zhang, Haoyu Wu, Jie Li, and Rui Huang.
+		Kangfu Mei, <b>Juncheng Li</b>, Jiajie Zhang, Haoyu Wu, Jie Li, and Rui Huang*.
 		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
 		<font color="red">AIM2019 Winner</font><br> 
 		<a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
@@ -363,7 +363,7 @@
 		<img src="./indexpics/ICCV2021.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="paper/ICCV_2021.pdf" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
-		Qiaosi Yi, <b>Juncheng Li</b>, Qinyan Dai, Faming Fang, Guixu Zhang, and Tieyong Zeng.
+		Qiaosi Yi, <b>Juncheng Li</b>, Qinyan Dai, Faming Fang*, Guixu Zhang, and Tieyong Zeng.
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
 		<font color="red">Top computer vision conference.</font><br>
 		<a href="paper/ICCV_2021.pdf", target="_blank">[Paper]</a>
@@ -382,7 +382,7 @@
 		<img src="./indexpics/ACMMM.jpeg" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="paper/ACMMM_2021.pdf" target="_blank">Feedback Network for Mutually Boosted Stereo Image Super-Resolution and Disparity Estimation</a><br>
-		Qinyan Dai, <b>Juncheng Li</b>, Qiaosi Yi, Faming Fang, and Guixu Zhang1g.
+		Qinyan Dai, <b>Juncheng Li</b>, Qiaosi Yi, Faming Fang*, and Guixu Zhang.
 		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACM MM</b></i>), 2021. <br>
 		<font color="red">Top multimedia conference.</font><br>
 		<a href="paper/ACMMM_2021.pdf", target="_blank">[Paper]</a>
@@ -475,10 +475,10 @@
 			<td> IEEE TIP/ TMM/ TCSVT/ SPL</td>
 		</tr>
         <tr>
-			<td> Information Science/ Pattern Recognition/ Knowledge-Based Systems</td>
+			<td> INS/ PR/ KBS...</td>
 		</tr>
 		<tr>
-			<td> ICME/ BMVC/ ICPR...</td>
+			<td> NTIRE/ ICME/ BMVC/ ICPR...</td>
 		</tr>
 	</tbody>
 </table>
