--- a/index_zw.html
+++ b/index_zw.html
@@ -381,7 +381,7 @@
 		<font color="red">多媒体顶级会议。</font><br>
 		<a href="paper/ACMMM_2021.pdf", target="_blank">[论文]</a>
 		<a href="poster/ACMMM_poster.pdf", target="_blank">[海报]</a>
-        [代码]
+        <a href="https://github.com/MIVRC/SSRDEFNet-PyTorch", target="_blank">[代码]</a>
 		</td>
 	</tr>
 	<tr></tr>
