--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 
 
-<h2>Selected Publications [Total Citations: 701] [Highest Citation: 380]</h2>
+<h2>Selected Publications [Total Citations: 705] [Highest Citation: 381]</h2>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -271,7 +271,7 @@
 		<td width="206">
 		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation</a><br>
+		<td> <a href="" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation【New】</a><br>
 		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
 		<font color="red">*Corresponding author. SCI-1.</font><br>
